--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/vuza/hi/issues"
   },
-  "homepage": "https://github.com/vuza/hi#readme"
+  "homepage": "https://github.com/vuza/hi#readme",
+  "dependencies": {
+    "express": "^4.13.4",
+    "socket.io": "^1.4.5",
+    "socket.io-p2p": "^2.2.0"
+  }
 }
