--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
   "dependencies": {
     "express": "^4.13.4",
     "socket.io": "^1.4.5",
-    "socket.io-p2p": "^2.2.0"
+    "socket.io-p2p-server": "^1.2.0"
   }
 }
