requirejs to bower and bower to gitignore

--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,8 @@
   "homepage": "https://github.com/vuza/hi",
   "moduleType": [
     "amd"
-  ]
+  ],
+  "dependencies": {
+    "requirejs": "~2.1.22"
+  }
 }
