--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
   ],
   "dependencies": {
     "requirejs": "~2.1.22",
-    "socket.io-p2p": "https://github.com/socketio/socket.io-p2p.git#2.0.1",
-    "socket.io-client": "~1.4.5"
+    "socket.io-client": "~1.4.5",
+    "socket": "https://github.com/nkzawa/socket.io-stream",
+    "simple-peer": "https://github.com/feross/simple-peer.git#6.0.2"
   }
 }
