--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   "homepage": "https://github.com/vuza/hi#readme",
   "dependencies": {
     "express": "^4.13.4",
-    "socket.io": "^1.4.5",
-    "socket.io-p2p-server": "^1.2.0"
+    "socket.io": "^1.4.5"
   }
 }
