--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "homepage": "https://github.com/vuza/hi#readme",
   "dependencies": {
     "express": "^4.13.4",
+    "fs": "0.0.2",
+    "https": "^1.0.0",
     "socket.io": "^1.4.5"
   }
 }
