--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "express": "^4.13.4",
     "fs": "0.0.2",
+    "http": "0.0.0",
     "https": "^1.0.0",
     "socket.io": "^1.4.5"
   }
